Mobile Layout Bug Fixes - Transitions will only be active during onClicked(). This is so media query breakpoints do not trigger the transition. - height variable now uses calc rather than max. Oops.

--- a/src/app/screen-bouncer/collapsible/collapsible.component.css
+++ b/src/app/screen-bouncer/collapsible/collapsible.component.css
@@ -1,6 +1,6 @@
 :host{
     --width: max(300px,20rem);
-    --height: max(100vh - 200px);
+    --height: calc(100vh - 200px);
     position: relative; /* relative position so button can use absolute */
 }
 
@@ -11,13 +11,11 @@
     {
         height: 100%;
         width: 0;
-        transition: width 0.25s ease;
     }
     @media(width <= 500px)
     {
         width: 100%;
         height: 0;
-        transition: height 0.25s ease;
     }
 }
 
@@ -33,6 +31,11 @@
         width: 100%;
         height: var(--height);
     }
+}
+
+.slide-transition{
+    @media(width > 500px){transition: width 0.25s ease}
+    @media(width <= 500px){transition: height 0.25s ease}
 }
 
 .anchor{
